--- a/src/style.css
+++ b/src/style.css
@@ -8,3 +8,42 @@ html,body{
     height: 100%;
     background-color: black;
 }
+.masked{
+    position: relative;
+    background: url("https://i.pinimg.com/56x/d9/54/87/d95487ffab31b9722b12eaf0e5709494.jpg") no-repeat center center;
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    background-size: cover;
+}
+
+.masked::before{
+    content: "MacBook Pro";
+    position: absolute;
+    top: 0;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    background: url("https://i.pinimg.com/56x/d9/54/87/d95487ffab31b9722b12eaf0e5709494.jpg") no-repeat center center;
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    background-size: cover;
+    filter: blur(40px);
+    opacity: 0.8;
+}
+.masked::after{
+    content: "MacBook Pro";
+    position: absolute;
+    top: 0;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    background: url("https://i.pinimg.com/56x/d9/54/87/d95487ffab31b9722b12eaf0e5709494.jpg") no-repeat center center;
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    background-size: cover;
+    filter: blur(20px);
+    opacity: 0.8;
+}
